deployment/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/main: "true"
        io.kompose.service: postgresql
    spec:
      containers:
      - env:
        - name: POSTGRES_DBNAME
          value: explorer
        - name: POSTGRES_PASS
          value: pwd_fabnum_postgres!
        - name: POSTGRES_PASSWORD
          value: pwd_fabnum_postgres!
        - name: POSTGRES_USER
          value: poi
        image: postgres:13.0-alpine
        imagePullPolicy: ""
        name: postgresql
        ports:
        - containerPort: 5432
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
